# infra-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  circuit_breaker.py  config.py  docker-compose.yml  lifecycle.py  llm.py  llm_provider.py  mcp_server.py  monitor.py  notify.py  pyproject.toml  throttler.py  watcher.py
graph/: __init__.py  auto_respond.py  deploy.py  diagnose.py  restart.py  state.py
tests/: conftest.py  test_circuit_breaker.py  test_config.py  test_lifecycle.py  test_llm.py  test_llm_provider.py  test_monitor.py  test_notify.py  test_throttler.py  test_watcher.py
tests/graph/: test_auto_respond.py  test_deploy.py  test_diagnose.py  test_restart.py  test_state.py
tests/tools/: test_compose_tools.py  test_docker_tools.py  test_portainer_tools.py  test_traefik_tools.py
tools/: __init__.py  compose_tools.py  docker_tools.py  portainer_tools.py  traefik_tools.py
